kubernets/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: db-data-pvc
      - name: csv-volume
        emptyDir: {}
      - name: init-volume
        emptyDir: {}
      - name: cloudsql-instance-credentials
        secret:
          secretName: db-credentials
      containers:
      - name: postgres
        image: postgres:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
        - name: init-volume
          mountPath: /docker-entrypoint-initdb.d
        - name: csv-volume
          mountPath: /csvs
      restartPolicy: Always
