kubernets/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filmcomments-api-deployment
spec:
  selector:
    matchLabels:
      app: filmcomments-api
  replicas: 1
  template:
    metadata:
      labels:
        app: filmcomments-api
    spec:
      containers:
      - name: filmcomments-api-container
        image: liuzhe2022/filmcomments-api:v1
        ports:
        - containerPort: 5000
          protocol: TCP
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: filmcomments-api-service
spec:
  selector:
    app: filmcomments-api
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
  type: LoadBalancer
