kubernets/fronted-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filmcomments-fronted-deployment
spec:
  selector:
    matchLabels:
      app: filmcomments-fronted
  replicas: 1
  template:
    metadata:
      labels:
        app: filmcomments-fronted
    spec:
      containers:
      - name: filmcomments-fronted-container
        image: liuzhe2022/filmcomments-web:amd
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: filmcomments-fronted-service
spec:
  selector:
    app: filmcomments-fronted
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  type: LoadBalancer
