kubernets/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    networking.gke.io/managed-certificates: "my-managed-cert"
spec:
  rules:
  - host: "my-filmcomments.com"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: filmcomments-fronted-service
            port:
              number: 80
